# HyperRUSTY

./: .gitignore  .gitmodules  .vimspector.json  Cargo.toml  LICENSE  README.md  SPISlave_unrolled.smt2  abp.hq  aut1.hoa  aut2.hoa  autRes.hoa  auto_mini.hq  commands.txt  create-smt-benchmarks.sh  divider_transformed.smt2  divider_unrolled.smt2  encoding.smt2  export-smt2.sh  fcmp.smt2  fcmp_unrolled.smt2  fcmptop_unrolled.smt2  fdiv_harness_unrolled.smt2  flatten_smt.py  flattened.txt  formula.hq  fpu.smt2  fpu_small.smt2  fpu_small_tb_unrolled.smt2  input.smt2  led_fsm_unrolled.smt2  light_unrolled.smt2  lin.hq  mini.hq  mini.smv  model.smt2  ni.hq  ni.smv  rp.hq  run.sh  run_ahltl.sh  (+19 more)
.github/workflows/: sync-benchmarks.yml
_outfiles/: HQ.qcir  quabs.out  table1_runtimes.csv  table1_runtimes.md  table2_runtimes.csv  table2_runtimes.md
ahltlunroller/: Cargo.toml
ahltlunroller/src/: lib.rs
benchmarks/0_infoflow/: info.hq  test.hq  test.smv
benchmarks/10_NIexp/: ni_example.smv  tini.hq
benchmarks/11_ksafety/: doubleSquare.hq  doubleSquare.smv
benchmarks/13_teamltl/: team2.smv
benchmarks/15_bank/: bank3_complex_V1.smv  bank3_complex_V2.smv  bank3_complex_V3.smv  bank3_simple.smv  dstore_noninf.hq  gmni.hq
benchmarks/16_constructor/: constructor_conc.smv
benchmarks/17_tictac/: determinism.hq  readme.txt.txt  tictac.smv  tictac_modes.smv
benchmarks/18_bidding/: bid_safe.smv
benchmarks/19_iqueue/: iqueue.hq  iqueue_conc.smv  iqueue_seq.smv
benchmarks/1_bakery/: bakery3.smv  bakery7.smv  symmetry11.hq
benchmarks/20_keypad/: keypad.smv  keypad_2.hq
benchmarks/21_queue/: atomic.smv  concurrent.smv  lin.hq
benchmarks/22_emm_aba/: emm_aba_conc.smv  emm_aba_seq.smv
benchmarks/23_lazy_list/: lazy_list.hq
benchmarks/2_snark/: lin.hq  snark1_seq.smv  snark2.hq  snark2_M2_sequential.smv
benchmarks/3_ni/: NI_incorrect.smv  temp.smv
benchmarks/4_nrp/: NRP_formula.hq
benchmarks/5_planning/: robotic_robustness_100.smv  robotic_robustness_1600.smv  (+8 more)
enchelper/: Cargo.toml
encoder/: Cargo.toml
encoder/src/: lib.rs  verilog_helper.rs
expressions/: Cargo.toml
flags/: Cargo.toml
fsm/: Cargo.toml
fsm/src/: csv_parser.rs  encoder.rs  gate_builder.rs  helper_functions.rs  hltl_unroller.rs  input_to_expressions.rs  lib.rs  parser.rs  qcir_builder.rs  symbol_map.rs  unroller.rs
hltlunroller/: Cargo.toml
ir/: Cargo.toml
ir/src/: lib.rs  (+1 more)
logging/: Cargo.toml
loop_conditions/: Cargo.toml
loop_conditions/src/: lib.rs
outputs/: HQ.qcir
parser_nusmv/: Cargo.toml
src/: README.md  main.rs  thh_main.rs
unroller_qbf/: Cargo.toml
verilog/: Cargo.toml  build.ys  build_GTD022.ys  build_buggy_or1200.ys  build_chacha.ys  build_or1200.ys  build_picorv32.ys  build_trng.ys
verilog/designs/or1200/: or1200_cfgr.v  or1200_cpu.v  or1200_defines.v
verilog/designs/test-designs/: infoflow.v  updowncounter.v
verilog/src/: error.rs  ir_parser.rs  lib.rs  main.rs  model.rs  parser.rs  smt_preprocess.rs  yosys.rs
(+478 files in other folders)
