[package]
name = "sim"
version = "0.1.0"
edition = "2024"

[dependencies]
z3 = "0.13"
clap = { version = "4.5.40", features = ["cargo"] }
parser = { path = "./parser" }
ir = { path = "./ir" }
encoder = { path = "./encoder" }
enchelper = { path = "./enchelper" }
parser_nusmv = { path = "./parser_nusmv" }
unroller_qbf = { path = "./unroller_qbf" }