[package]
name = "HyperRUSTY"
version = "0.1.0"
edition = "2024"

[dependencies]
z3 = "0.13.0"
clap = { version = "4.5", features = ["cargo", "derive"] }
parser = { path = "./parser" }
ir = { path = "./ir" }
encoder = { path = "./encoder" }
enchelper = { path = "./enchelper" }
parser_nusmv = { path = "./parser_nusmv" }
unroller_qbf = { path = "./unroller_qbf" }
hqb_verilog = { path = "./verilog" }
loop_conditions = { path = "./loop_conditions" }
fs = "0.0.5"
log = "0.4.28"
env_logger = "0.11.8"
anyhow = "1.0.100"
regex = "1.12.2"
