[package]
name = "fsm"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.10.5"
expressions = {path= "../expressions"}
logging = {path= "../logging"}
ir = { path = "../ir" }
bytes = "1.6.0"
combine = "4.6.7"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
stacker = "0.1.15"
indexmap = "2.2.6"
