[package]
name = "loop_conditions"
version = "0.1.0"
edition = "2021"

[dependencies]
z3 = "0.13.0"
ir = { path = "../ir" }
enchelper = { path = "../enchelper" }
hltlunroller = { path = "../hltlunroller" }
parser = { path = "../parser" }
expressions = { path = "../expressions" }
fsm = { path = "../fsm" }
flags = { path = "../flags" }
logging = { path = "../logging" }
unroller_qbf = { path = "../unroller_qbf"}

    